# firmware-himax-we-i-plus

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.gnu  README.md  bitmap_helpers.h  ei_run_impulse.cpp  ei_run_impulse.h  framebuffer.txt  himax-bmp-dump  hx_drv_tflm.h  main.cc  make-image.sh  memory.lcf  memory.x  snapshot-to-jpg.js  toolchain.gnu.cmake  toolchain.metaware.cmake
build-mw/: CMakeCache.txt  Makefile  app.elf  app.map  cmake_install.cmake
edge-impulse-sdk/CMSIS/DSP/Include/: arm_math.h
edge-impulse-sdk/CMSIS/DSP/Source/TransformFunctions/: arm_cfft_f16.c  arm_cfft_init_f16.c
edge-impulse-sdk/classifier/: ei_classifier_smooth.h  ei_fill_result_struct.h  ei_nms.h  ei_run_classifier.h  ei_run_dsp.h
edge-impulse-sdk/classifier/inferencing_engines/: tensorrt.h  tflite_helper.h  tflite_tidl.h
edge-impulse-sdk/dsp/: config.hpp  numpy.hpp
edge-impulse-sdk/dsp/speechpy/: feature.hpp
edge-impulse-sdk/porting/: ei_classifier_porting.h
edge-impulse-sdk/porting/himax/: ei_classifier_porting.cpp
edge-impulse-sdk/tensorflow/lite/kernels/: kernel_util_lite.cc
edge-impulse-sdk/tensorflow/lite/micro/: all_ops_resolver.cc  micro_utils.h
edge-impulse-sdk/tensorflow/lite/micro/kernels/: scratch_buffers.cc
firmware-sdk/: ei_device_interface.h  ei_fusion.cpp  ei_fusion.h  ei_image_lib.cpp  ei_image_nn.h
firmware-sdk/jpeg/: encode_as_jpg.h
image_gen_linux/: config.ini
image_gen_linux_v3/: config.ini
inference/: ei_run_audio_impulse.cpp  ei_run_camera_impulse.cpp  ei_run_fusion_impulse.cpp  ei_run_impulse.h
ingestion-sdk-c/: ei_config.h  ei_sampler.cpp  ei_sampler.h  sensor_aq.cpp  sensor_aq.h  sensor_aq_mbedtls_hs256.cpp  sensor_aq_mbedtls_hs256.h
ingestion-sdk-platform/: JPEGENC.h  encode_as_jpg.h  jpeg.inl
ingestion-sdk-platform/himax/: FixedPoint.h  ei_at_handlers.cpp  ei_at_handlers.h  ei_device_himax.cpp  ei_device_himax.h  ei_device_info.h  ei_himax_fs_commands.cpp  ei_himax_fs_commands.h
model-parameters/: anomaly_clusters.h  dsp_blocks.h  model_metadata.h  model_variables.h
repl/: FixedPoint.h  at_base64.cpp  at_cmd_interface.h  at_cmds.h  print_all.c  print_all.cpp  repl.cpp
sensors/: ei_camera.cpp  ei_camera.h  ei_fusion_sensors_config.h  ei_inertialsensor.cpp  ei_inertialsensor.h  ei_microphone.cpp  ei_microphone.h
tflite-model/: 20210910_134700.int8_io_int8.cpp  20210910_134700.int8_io_int8.cpp.h  tflite-trained.h  trained_model_compiled.cpp  trained_model_compiled.h
